@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2191 2012/02/28 10:38:01 jp Exp $
+# $Id: CHANGES,v 1.2192 2012/02/28 22:59:02 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.2 2012-03-??
+ - 2012-02-28 Fixed bug#8274 - Dynamic Fields ACLs does not work correctly at Ticket Split.
  - 2012-02-28 Improved #7526 - Fixed handling of special characters (, ), &, - within statistics.
  - 2012-02-27 Fixed bug#8255 - TicketSearch in DynamicFields doesn't support ExtendedSearchCondition.
  - 2012-02-25 Fixed bug#8258 - DynamicField date value is reset to NULL.
